Do not fail when a repo is missing